--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,4 +5,5 @@
     <string name="bar_title_menu_cinema">&#160;&#160;&#160;&#160;&#160;影院列表&#160;&#160;&#160;&#160;&#160;</string>
     <string name="bar_title_menu_add_cinema">&#160;&#160;&#160;&#160;&#160;添加影院&#160;&#160;&#160;&#160;&#160;</string>
     <string name="bar_title_menu_exit">&#160;&#160;&#160;&#160;&#160;退出Exit&#160;&#160;&#160;&#160;&#160;</string>
+    <string name="title_activity_cinema_orders">CinemaOrdersActivity</string>
 </resources>
